[package]
name = "eccodes-sys"
version = "2.12.1"
authors = ["Ryan <rnleach@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"
publish = false

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.49.0"
cmake = "0.1"
dirs = "1.0.5"
flate2 = "1.0.7"
tar = "0.4.22"
tempdir = "0.3.7"
pkg-config = "0.3.14"
